WebCore:

Reviewed by Tim Hatcher.

        Part of patch for http://bugs.webkit.org/show_bug.cgi?id=11323
        Link dragging behaviour does not obey WebKitEditableLinkBehavior WebPref

        No layout tests added as this must be tested manually by the test
        WebCore/manual-tests/contenteditable-link.html

        * WebCore.exp: Exported HitTestResult::isLiveLink().
        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::HTMLAnchorElement):
        (WebCore::HTMLAnchorElement::defaultEventHandler):
        (WebCore::HTMLAnchorElement::isLiveLink):
        * html/HTMLAnchorElement.h: added m_wasShiftKeyDownOnMouseDown variable
        to track shift key status.
        * manual-tests/contenteditable-link.html: Added description about link
        dragging behaviour.
        * rendering/HitTestResult.cpp:
        (WebCore::HitTestResult::isLiveLink): Added.
        * rendering/HitTestResult.h:

WebKit:

        Reviewed by Tim Hatcher.

        Part of patch for http://bugs.webkit.org/show_bug.cgi?id=11323
        Link dragging behaviour does not obey WebKitEditableLinkBehavior WebPref

        * DefaultDelegates/WebDefaultUIDelegate.m:
        (-[NSApplication webView:dragSourceActionMaskForPoint:]): Logic moved to
        WebHTMLView's _mayStartDragAtEventLocation
        * Misc/WebElementDictionary.m: added isLiveLink
        (+[WebElementDictionary initializeLookupTable]):
        (-[WebElementDictionary _isLiveLink]):
        * WebView/WebHTMLView.m:
        (-[WebHTMLView _mayStartDragAtEventLocation:]): Editable links should
        only be followed if isLiveLink is true
        (-[WebHTMLView _isMoveDrag:]): A drag of a live editable link is not
        a move
        (-[WebHTMLView draggingUpdatedWithDraggingInfo:actionMask:]):
        (-[WebHTMLView concludeDragForDraggingInfo:actionMask:]):
        * WebView/WebView.mm: added WebElementLinkIsLiveKey
        * WebView/WebViewPrivate.h: ditto



Canonical link: https://commits.webkit.org/14825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17629 268f45cc-cd09-0410-ab3c-d52691b4dbfc